Fix for annoying overflow scroll issues caused by facebook and twitter share/follow widgets.

--- a/.themes/classic/sass/base/_layout.scss
+++ b/.themes/classic/sass/base/_layout.scss
@@ -89,7 +89,10 @@ body {
   }
 }
 
-#content { > div, > article { width: 100%; }}
+#content {
+  overflow: hidden;
+  > div, > article { width: 100%; }
+}
 
 aside.sidebar {
   float: none;
@@ -134,6 +137,7 @@ body.sidebar-footer {
   }
   #content {
     @extend .group;
+    overflow: visible;
     margin-right: $sidebar-width-medium;
     position: relative;
     .no-sidebar & { margin-right: 0; border-right: 0; }
