--- a/.themes/classic/sass/partials/_sharing.scss
+++ b/.themes/classic/sass/partials/_sharing.scss
@@ -4,3 +4,5 @@
     background: $img-border top left repeat-x;
   }
 }
+
+#fb-root { display: none; }
